@@ -27,24 +27,22 @@ import de.caritas.cob.messageservice.api.service.LogService;
 import de.caritas.cob.messageservice.api.service.MessageMapper;
 import de.caritas.cob.messageservice.api.service.RocketChatService;
 import de.caritas.cob.messageservice.generated.api.controller.MessagesApi;
-import io.swagger.annotations.Api;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import java.time.Instant;
 import java.util.Optional;
-import javax.validation.Valid;
+import jakarta.validation.Valid;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RestController;
 
 /**
  * Controller for message requests.
  */
 @RestController
+@Tag(name = "message-controller")
 @RequiredArgsConstructor
-@Api(tags = "message-controller")
 public class MessageController implements MessagesApi {
 
   private final @NonNull RocketChatService rocketChatService;
@@ -84,7 +82,7 @@ public class MessageController implements MessagesApi {
    * @return {@link ResponseEntity} with the {@link HttpStatus}
    */
   @Override
-  public ResponseEntity<Void> updateKey(@Valid @RequestBody MasterKeyDTO masterKey) {
+  public ResponseEntity<Void> updateKey(@Valid MasterKeyDTO masterKey) {
 
     if (!encryptionService.getMasterKey().equals(masterKey.getMasterKey())) {
       encryptionService.updateMasterKey(masterKey.getMasterKey());
@@ -105,9 +103,9 @@ public class MessageController implements MessagesApi {
    * @return {@link ResponseEntity} with the {@link HttpStatus}
    */
   @Override
-  public ResponseEntity<MessageResponseDTO> createMessage(@RequestHeader String rcToken,
-      @RequestHeader String rcUserId, @RequestHeader String rcGroupId,
-      @Valid @RequestBody MessageDTO message) {
+  public ResponseEntity<MessageResponseDTO> createMessage(String rcToken,
+      String rcUserId, String rcGroupId,
+      MessageDTO message) {
 
     var groupMessage = ChatMessage.builder()
         .rcToken(rcToken)
@@ -133,9 +131,9 @@ public class MessageController implements MessagesApi {
    * @return {@link ResponseEntity} with the {@link HttpStatus}
    */
   @Override
-  public ResponseEntity<MessageResponseDTO> forwardMessage(@RequestHeader String rcToken,
-      @RequestHeader String rcUserId, @RequestHeader String rcGroupId,
-      @Valid @RequestBody ForwardMessageDTO forwardMessageDTO) {
+  public ResponseEntity<MessageResponseDTO> forwardMessage(String rcToken,
+      String rcUserId, String rcGroupId,
+      ForwardMessageDTO forwardMessageDTO) {
 
     Optional<String> alias =
         JSONHelper.convertAliasMessageDTOToString(
@@ -164,9 +162,9 @@ public class MessageController implements MessagesApi {
    * @return {@link ResponseEntity} with the {@link HttpStatus}
    */
   @Override
-  public ResponseEntity<MessageResponseDTO> createFeedbackMessage(@RequestHeader String rcToken,
-      @RequestHeader String rcUserId, @RequestHeader String rcFeedbackGroupId,
-      @Valid @RequestBody MessageDTO message) {
+  public ResponseEntity<MessageResponseDTO> createFeedbackMessage(String rcToken,
+      String rcUserId, String rcFeedbackGroupId,
+      MessageDTO message) {
 
     var feedbackMessage = ChatMessage.builder()
         .rcToken(rcToken)
@@ -189,9 +187,12 @@ public class MessageController implements MessagesApi {
    *                            written in the alias object
    */
   @Override
-  public ResponseEntity<MessageResponseDTO> createVideoHintMessage(@RequestHeader String rcGroupId,
-      @Valid @RequestBody VideoCallMessageDTO videoCallMessageDTO) {
+  public ResponseEntity<MessageResponseDTO> createVideoHintMessage(String rcGroupId,
+      VideoCallMessageDTO videoCallMessageDTO) {
 
+    if (videoCallMessageDTO == null) {
+      throw new BadRequestException("VideoCallMessageDTO is required.", LogService::logBadRequest);
+    }
     var response = this.messenger.createVideoHintMessage(rcGroupId,
         videoCallMessageDTO);
 
@@ -206,8 +207,8 @@ public class MessageController implements MessagesApi {
    * @return {@link ResponseEntity} with the {@link HttpStatus}
    */
   @Override
-  public ResponseEntity<Void> saveDraftMessage(@RequestHeader String rcGroupId,
-      @Valid @RequestBody DraftMessageDTO message) {
+  public ResponseEntity<Void> saveDraftMessage(String rcGroupId,
+      DraftMessageDTO message) {
 
     SavedDraftType savedDraftType = this.draftMessageService.saveDraftMessage(message.getMessage(),
         rcGroupId, message.getT());
@@ -222,7 +223,7 @@ public class MessageController implements MessagesApi {
    * @return {@link ResponseEntity} with the {@link HttpStatus}
    */
   @Override
-  public ResponseEntity<DraftMessageDTO> findDraftMessage(@RequestHeader String rcGroupId) {
+  public ResponseEntity<DraftMessageDTO> findDraftMessage(String rcGroupId) {
     Optional<DraftMessageDTO> draftMessage = this.draftMessageService.findAndDecryptDraftMessage(
         rcGroupId);
     return draftMessage.map(ResponseEntity::ok)
@@ -238,25 +239,25 @@ public class MessageController implements MessagesApi {
    * @return {@link ResponseEntity} with the {@link HttpStatus}
    */
   @Override
-  public ResponseEntity<MessageResponseDTO> saveAliasOnlyMessage(@RequestHeader String rcGroupId,
-      @Valid AliasOnlyMessageDTO aliasOnlyMessageDTO) {
+  public ResponseEntity<MessageResponseDTO> saveAliasOnlyMessage(String rcGroupId,
+      AliasOnlyMessageDTO aliasOnlyMessageDTO) {
     var type = aliasOnlyMessageDTO.getMessageType();
     var aliasArgs = aliasOnlyMessageDTO.getArgs();
 
     if (type.equals(MessageType.USER_MUTED) || type.equals(MessageType.USER_UNMUTED)) {
-      var message = String.format("Message type (%s) is protected.", type);
+      var message = "Message type (%s) is protected.".formatted(type);
       throw new BadRequestException(message, LogService::logBadRequest);
     }
 
     if (nonNull(aliasArgs) && type != MessageType.REASSIGN_CONSULTANT) {
-      var message = String.format("Alias args are not supported by type (%s).", type);
+      var message = "Alias args are not supported by type (%s).".formatted(type);
       throw new BadRequestException(message, LogService::logBadRequest);
     }
 
     if (type == MessageType.REASSIGN_CONSULTANT && hasMissingMandatoryAliasArgForReassignment(
         aliasArgs)) {
       var errorFormat = "toConsultantId is required during reassignment creation (%s).";
-      var message = String.format(errorFormat, MessageType.REASSIGN_CONSULTANT);
+      var message = errorFormat.formatted(MessageType.REASSIGN_CONSULTANT);
       throw new BadRequestException(message, LogService::logBadRequest);
     }
 
@@ -267,8 +268,10 @@ public class MessageController implements MessagesApi {
 
   private boolean hasMissingMandatoryAliasArgForReassignment(AliasArgs aliasArgs) {
     if (nonNull(aliasArgs)) {
-      return isNull(aliasArgs.getToConsultantId()) || isNull(aliasArgs.getFromConsultantName())
-          || isNull(aliasArgs.getToConsultantName()) || isNull(aliasArgs.getToAskerName());
+      return isNull(aliasArgs.getToConsultantId()) || isNull(
+          aliasArgs.getFromConsultantName())
+          || isNull(aliasArgs.getToConsultantName()) || isNull(
+          aliasArgs.getToAskerName());
     }
     return true;
   }
@@ -287,7 +290,7 @@ public class MessageController implements MessagesApi {
       AliasArgs aliasArgs) {
     var reassignStatus = aliasArgs.getStatus();
     if (reassignStatus == ReassignStatus.REQUESTED) {
-      var message = String.format("Updating to status (%s) is not supported.", reassignStatus);
+      var message = "Updating to status (%s) is not supported.".formatted(reassignStatus);
       throw new BadRequestException(message, LogService::logBadRequest);
     }
 
@@ -332,8 +335,8 @@ public class MessageController implements MessagesApi {
    */
   @Override
   public ResponseEntity<MessageResponseDTO> saveAliasMessageWithContent(
-      @RequestHeader String rcGroupId,
-      @Valid AliasMessageDTO aliasOnlyMessageDTO) {
+      String rcGroupId,
+      AliasMessageDTO aliasOnlyMessageDTO) {
     var type = aliasOnlyMessageDTO.getMessageType();
     var response = messenger
         .postAliasMessage(rcGroupId, type, aliasOnlyMessageDTO.getContent());
